--- a/style.css
+++ b/style.css
@@ -140,6 +140,8 @@ ul #list2{
     
 }
 article#extra{
+    min-width: 320px;
+    max-width: 1000px;
     background-color:var(--cor02);
     padding: 10px;
     border-radius: 10px;
